--- a/adaptive_site/sass/_media.sass
+++ b/adaptive_site/sass/_media.sass
@@ -24,3 +24,10 @@
       font-size: 35px
     &_subheader
       font-size: 25px
+  .reasons
+    &_block
+      flex-direction: column
+      align-items: flex-start
+    &_descr
+      width: 300px
+      margin-top: 20px
